*) avoid using a ResourceBundle directly due to bundle updating problems - a resource-bundle fetched via ResourceBundle.getBundle can not be re-loaded - we should use our IResourceBundleTool instead
git-svn-id: svn://svn.paxle.net/paxle/trunk@2554 f5d3ab42-bacf-4b1a-9692-565be65a0cfe